# vrn-devday-workshop

./: README.md  build.gradle  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/tensorflow/humanrec/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/tensorflow/humanrec/activity/: OpenCVActivity.kt  RenderScriptActivity.kt
app/src/main/java/com/tensorflow/humanrec/model/: Age.kt  Gender.kt
app/src/main/java/com/tensorflow/humanrec/processing/agegender/: AgeGenderDetector.kt  IAgeGenderDetector.kt
app/src/main/java/com/tensorflow/humanrec/processing/face/: FaceDetector.kt  IFaceDetector.kt
app/src/main/java/com/tensorflow/humanrec/processing/processing/: FaceProcessing.kt  IFaceProcessing.kt
app/src/main/java/com/tensorflow/humanrec/utility/: Extentions.kt
app/src/main/java/com/tensorflow/humanrec/utility/camera/: AutoFitTextureView.kt  CameraHelper.kt  CameraReadyCallback.kt
app/src/main/java/com/tensorflow/humanrec/utility/opencvfix/: CameraBridgeViewBase.java  JavaCameraView.java
app/src/main/java/com/tensorflow/humanrec/utility/permissions/: PermissionsCallback.kt  PermissionsHelper.kt
app/src/main/res/layout/: activity_choose.xml  activity_main.xml  activity_opencv.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/tensorflow/humanrec/: ExampleUnitTest.kt
faceprocessing/: build.gradle  faceprocessing-release.aar
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary341/: build.gradle
openCVLibrary341/src/main/java/org/opencv/android/: JavaCameraView.java
